Basic Cricket Animation

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 </head>
 <body>
     <div class="field">
-        <div class="call">
+        <!-- <div class="call">
             <i class="fa fa-phone" aria-hidden="true"></i>
-        </div>
-        <p>Hover on Pitch To Hit the ball for Six </p>
+        </div> -->
+        <p>Hover on Pitch To Hit  the ball for Six </p>
         <div class="pitch">
             <img src="img/cricket/bat.png" class="bat" alt="">
             <img src="img/cricket/ball.png" class="ball" alt="">
